[package]
name = "hyperpass"
version = "0.1.0"
edition = "2024"

[dependencies]
http-body-util = "0.1.3"
hyper = { version = "1.10.1", features = ["full"] }
hyper-util = { version = "0.1.20", features = ["full"] }
thiserror = "2.0.18"
tokio = {version = "1.52.3", features=["macros", "rt-multi-thread", "net", "io-util"]}
