[package]
name = "hyperpass"
version = "0.1.0"
edition = "2024"

[dependencies]
console-subscriber = "0.5.0"
env_logger = "0.11.10"
futures = "0.3.32"
http-body-util = "0.1.3"
hyper = { version = "1.10.1", features = ["full"] }
hyper-rustls = "0.27.9"
hyper-util = { version = "0.1.20", features = ["full"] }
log = "0.4.32"
nginx-discovery = "0.4.0"
rustls = "0.23.40"
thiserror = "2.0.18"
tokio = {version = "1.52.3", features=["macros", "rt", "rt-multi-thread", "net", "io-util", "signal"]}
tokio-rustls = "0.26.4"
tokio-util = { version = "0.7.18", features=["rt"]}

[features]
default = ["prod"]
dev = ["tokio/tracing"]
prod = []
